--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,26 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tv_name">Nome:</string>
+    <string name="tv_phone">Número:</string>
+    <string name="send_localization">Enviar Localização</string>
+    <string name="login_to_your_account">Entre com sua conta</string>
+    <string name="tv_email">E-mail</string>
+    <string name="tv_password">Senha</string>
+    <string name="tv_sign_in">Entrar</string>
+    <string name="tv_or_sign_with">-Ou Entre Com-</string>
+    <string name="tv_don_t_have_an_account">Não possui uma conta?</string>
+    <string name="tv_emergency">Emergências</string>
+    <string name="tv_status">Disponível</string>
+    <string name="tv_calls_accepted">Chamado Aceito</string>
+    <string name="tv_account_details">Detalhes da Conta</string>
+    <string name="tv_sign_out">Sair da Conta</string>
+    <string name="tv_create_your_account">Crie sua conta</string>
+    <string name="address_1">Endereço 1</string>
+    <string name="address_2">Endereço 2</string>
+    <string name="address_3">Endereço 3</string>
+    <string name="curriculo">Curriculo</string>
+    <string name="update_account">Atualizar</string>
+    <string name="accept">Aceitar</string>
+    <string name="decline">Recusar</string>
 </resources>
